correction de la largeur des boutons de fonctionnement afin qu'ils restent en version mobile toujours de la meme largeur que les cards
suppression des notions de max-width dans les breakpoints afin de ne pas
multiplier les lignes de code. Cela permet de faire une évolution entre
les différentes résolutions tout en gardant les modifications du format
précédent

--- a/sass/Base/_mediaqueries.scss
+++ b/sass/Base/_mediaqueries.scss
@@ -16,25 +16,25 @@ $breakpoint:(
 
 
 @mixin mobilescreen{
-    @media only screen and (min-width:map-get($breakpoint , toutpetit )) and (max-width:map-get($breakpoint , mobile )){
+    @media only screen and (min-width:map-get($breakpoint , toutpetit )) {
         @content
     }
 };
 
 @mixin notescreen{
-    @media only screen and (min-width:map-get($breakpoint , mobile )) and (max-width:map-get($breakpoint , notephone )){
+    @media only screen and (min-width:map-get($breakpoint , mobile )) {
         @content
     }
 };
 
 @mixin tabletscreen{
-    @media only screen and (min-width:map-get($breakpoint , mobile )+1){
+    @media only screen and (min-width:map-get($breakpoint , notephone )){
         @content
     }
 };
 
 @mixin largescreen{
-    @media only screen and (min-width:map-get($breakpoint , tablet )+1) {
+    @media only screen and (min-width:map-get($breakpoint , tablet )) {
         @content
     }
 };
