--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -10,7 +10,7 @@ header{
     box-shadow: 0px 3px 5px $Color_Gris_Dark;
     z-index: 10;
 
-    @include tabletscreen{
+    @include notescreen{
         width: 100%;
         background-color: transparent;
         height: 100px;
@@ -40,7 +40,7 @@ header{
         background-color: #fff;
         z-index: 10;
 
-        @include tabletscreen{
+        @include notescreen{
             width: 15%;
             min-width: 120px;
 
@@ -55,7 +55,7 @@ header{
             z-index: 10;
             transition: all 1s;
 
-            @include tabletscreen{
+            @include notescreen{
                 width: 100%;
             }
         }
