--- a/sass/Utils/_extensions.scss
+++ b/sass/Utils/_extensions.scss
@@ -11,14 +11,6 @@
 }
 
 
-/*.cartedimension{
-    width: 85%;
-    max-width: 400px;
-    margin : 0px auto 40px auto;
-    border-radius: 20px;
-    box-shadow: 3px 3px 5px $Color_Gris_Dark ;
-}*/
-
 .titresectionmenu{
     border-bottom: 4px solid $Color_Marque_Tertiaire;
     align-self: flex-start;
